--- a/.github/workflows/r-ci-cd.yml
+++ b/.github/workflows/r-ci-cd.yml
@@ -25,14 +25,15 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.2.0'
+          r-version: '4.5.2'
           
       - name: Cache R packages
         uses: actions/cache@v3
         with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}
-          restore-keys: ${{ runner.os }}-r-
+          path: ~/.local/share/renv
+          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-renv-
       
       - name: Install system dependencies
         run: |
@@ -49,32 +50,10 @@ jobs:
             libtiff5-dev \
             libjpeg-dev
           
-      - name: Install dependencies
+      - name: Restore renv environment
         run: |
-          # Set CRAN mirror
-          options(repos = c(CRAN = "https://cloud.r-project.org"))
-          
-          # Install packages needed for testing
-          install.packages(c(
-            "testthat", 
-            "shiny", 
-            "shinyFeedback", 
-            "shinyjs", 
-            "tibble",
-            "withr",
-            "shinytest2"
-          ))
-          
-          # Verify installation
-          installed_packages <- rownames(installed.packages())
-          required_packages <- c("testthat", "shiny", "shinyFeedback", "shinyjs", "tibble", "withr")
-          missing_packages <- setdiff(required_packages, installed_packages)
-          
-          if (length(missing_packages) > 0) {
-            stop("Failed to install: ", paste(missing_packages, collapse = ", "))
-          }
-          
-          message("All required packages installed successfully")
+          if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
+          renv::restore()
         shell: Rscript {0}
       
       - name: Run tests
@@ -84,24 +63,8 @@ jobs:
           Sys.setenv("R_TESTS" = "")
           Sys.setenv("_R_CHECK_FORCE_SUGGESTS_" = "false")
           
-          # Set CRAN mirror
-          options(repos = c(CRAN = "https://cloud.r-project.org"))
-          
-          # Print diagnostic information
-          message("R Session Info:")
-          print(sessionInfo())
-          
-          # Install additional packages that might be needed
-          install.packages(c("withr"))
-          
           # Run tests with warnings suppressed
           tryCatch({
-            suppressWarnings({
-              library(shiny)
-              library(shinyFeedback)
-              library(shinyjs)
-              library(withr)
-            })
             test_results <- testthat::test_dir("tests/testthat", reporter = "summary")
             print(test_results)
           }, error = function(e) {
